Documentacion: primera version finalizada

--- a/doc/analisis-procesamiento-masivo.tex
+++ b/doc/analisis-procesamiento-masivo.tex
@@ -1,4 +1,4 @@
-Vivimos en el momento m\'as \'algido en la genraci\'on de informaci\'on, nunca antes había existido plataformas que generaran la cantidad de información que se genera hoy en d\'ia. El hecho de que del análisis de grandes cantidades de información se puedan extraer valiosos datos como estrategias de negocio, hacen que numerosas empresas y organizaciones almacenen cantidades ingentes de información para poder sacarle el máximo partido.
+Vivimos en el momento m\'as \'algido en la genraci\'on de informaci\'on, nunca antes había existido plataformas que generaran la cantidad de información que se genera hoy en d\'ia. El hecho de que del análisis de grandes cantidades de información se puedan extraer valiosos datos, como estrategias de negocio, hacen que numerosas empresas y organizaciones almacenen cantidades ingentes de información para poder sacarle el máximo partido.
 
 La generaci\'on de informaci\'on se est\'a produciendo en \'ambitos muy dispares, estos pueden ser redes sociales que mantienen millones de usuarios, grandes empresas con muchos clientes, laboratorios de f\'isica con redes de millones sensores y muchos otros ejemplos que podríamos mencionar. Todos ellos queriendo extraer el máximo valor a la información que recaban.
 
@@ -6,7 +6,7 @@ La generaci\'on de informaci\'on se est\'a produciendo en \'ambitos muy dispares
 
 Cuando hablamos de cantidades de información\'on del orden de terabytes o petabytes no podemos pensar en otra cosa que no sea computación distribuida. Para una sola m\'aquina, el tiempo que conllevar\'ia procesar esas cantidades de datos podr\'ian ser del orden de a\~nos.
 
-Por tanto, la computaci\'on distribuida es la \'unica soluci\'on con el hardware que hoy en d\'ia manejamos, que permit\'a analizar y manejar esas cantidades de información. Esta soluci\'on implica el uso de m\'ultiples computadores conectados a una red común, cada uno de las cuales tiene su propio procesador, arquitectura, memoria, etc, con lo que pueden ser una composición de maquinas con diferentes configuraciones (heterog\'enea). En contraposici\'on a este modelo encontramos la computaci\'on paralela en una sola m\'aquina, que consiste en utilizar m\'as de un hilo de procesamiento simult\'aneamente en un mismo procesador. Idealmente, el procesamiento paralelo permite que un programa se ejecute m\'as r\'apido, en la pr\'actica, suele ser difi\'icil dividir un programa de forma que CPUs separadas ejecuten diferentes porciones del programa sin ninguna interacci\'on que deteriore esa mejora de rendimiento.
+Por tanto, la computaci\'on distribuida es la \'unica soluci\'on con el hardware que hoy en d\'ia manejamos, que permit\'a analizar y manejar esas cantidades de información. Esta soluci\'on implica el uso de m\'ultiples computadores conectados a una red común, cada uno de las cuales tiene su propio procesador, arquitectura, memoria, etc. con lo que pueden ser una composición de m\'aquinas con diferentes configuraciones (heterog\'enea). En contraposici\'on a este modelo encontramos la computaci\'on paralela en una sola m\'aquina, que consiste en utilizar m\'as de un hilo de procesamiento simult\'aneamente en un mismo procesador. Idealmente, el procesamiento paralelo permite que un programa se ejecute m\'as r\'apido, en la pr\'actica, suele ser difi\'icil dividir un programa de forma que CPUs separadas ejecuten diferentes porciones del programa sin ninguna interacci\'on que deteriore esa mejora de rendimiento.
 
 \subsection{Modelo computacional: Map/Reduce}
 
