--- a/doc/desarrollo-diagramas.tex
+++ b/doc/desarrollo-diagramas.tex
@@ -1,9 +1,4 @@
-//TODO: escribir introducción
-
-\subsection{Diagrama de contexto}
-
-//TODO: incluir diagrama
-
+%\subsection{Diagrama de contexto}
 
 \subsection{Diagrama de flujo de datos}
 
