--- a/doc/manual-integracion.tex
+++ b/doc/manual-integracion.tex
@@ -1,6 +1,6 @@
-Lo que se ha explicado anteriormente \verapartado{ejecucion}, representa una ejecuci\'on normal de un problema de Hadoop, explicamos ahora como realizar esa ejecuci\'on pero utilizando la integraci\'on con Hadoop. Este proceso se ha llevado a cabo ya en este documento con dos problemas: MaxOne \verapartado{desarrollo-maxone} y Parity \verapartado{desarrollo-parity}, ahora lo explicamos de forma mas general prestando detalles a los diferentes contextos donde puede ser ejecutado.
+Lo que se ha explicado anteriormente \verapartado{ejecucion}, representa una ejecuci\'on normal de un problema de ECJ, explicamos ahora como realizar esa ejecuci\'on pero utilizando la integraci\'on con Hadoop. Este proceso se ha llevado a cabo ya en este documento con dos problemas: MaxOne \verapartado{desarrollo-maxone} y Parity \verapartado{desarrollo-parity}, ahora lo explicamos de forma m\'as general prestando detalles a los diferentes contextos donde puede ser ejecutado.
 
-Nos podemos encontrar en dos situciones diferentes dependiendo del acceso al cluster Hadoop que dispongamos. Si podemos acceder a alguna de las m\'aquinas del cluster, podemos hacer un ejecuci\'on local desde ella, por otro lado si no tenemos acceso debemos realizar la ejecuci\'on de forma remota. Ambos cosas requieren que en fichero de par\'ametros se indique que el evaluador a utilizar debe ser Hadoop, para ello debemos modificar el valor del par\'ametro \textit{eval} y establecerlo de la siguiente manera:
+Nos podemos encontrar en dos situciones diferentes dependiendo del acceso al cluster Hadoop que dispongamos. Si podemos acceder a alguna de las m\'aquinas del cluster, podemos hacer la ejecuci\'on local desde ella, por otro lado, si no tenemos acceso debemos realizar la ejecuci\'on de forma remota. Ambos casos requieren que en el fichero de par\'ametros se indique que el evaluador a utilizar debe ser Hadoop, para ello debemos modificar el valor del par\'ametro \textit{eval} y establecerlo de la siguiente manera:
 
 \begin{lstlisting}[language=Java]
 eval		= ec.hadoop.HadoopEvaluator
