--- a/doc/motivaciones.tex
+++ b/doc/motivaciones.tex
@@ -1,7 +1,7 @@
-Muchos problemas computacionales de diferente naturaleza se intentan afrontar haciendo uso de modelos computacionales tradicionales obteniendo no muy buenos resultados, la computación evolutiva aporta un enfoque bioinspirado que en muchos casos consigue proporcionar resultados m\'as que aceptables. Es por esto que su popularidad est\'a en aumento, siendo aplicada esta metodolog\'ia a problemas de muy diversa \'indole.
+Muchos problemas computacionales de diferente naturaleza se intentan afrontar haciendo uso de modelos computacionales tradicionales obteniendo, a veces, no muy buenos resultados. La computación evolutiva aporta un enfoque bioinspirado que en muchos casos consigue proporcionar resultados m\'as que aceptables. Es por esto que su popularidad est\'a en aumento, siendo aplicada esta metodolog\'ia a problemas de muy diversa \'indole.
 
-Con el paso de los a\~nos y la evoluci\'on de los sistemas computacionales, la computaci\'on evolutiva se ha intentado aplicar a la resoluci\'on de problemas cada vez m\'as complejos, lo cual en la mayor\'ia de los casos, suele conllevar el uso de m\'as recursos como capacidad de c\'omputo, memoria y tiempo. Esto hace que se busquen soluciones para mejorar el uso de estos recursos.
+Con el paso de los a\~nos y la evoluci\'on de los sistemas computacionales, la computaci\'on evolutiva se ha intentado aplicar a la resoluci\'on de problemas cada vez m\'as complejos. En la mayor\'ia de los casos, suele conllevar el uso de m\'as recursos como capacidad de c\'omputo, memoria y tiempo. Esto hace que se busquen soluciones para mejorar el uso de estos recursos.
 
-Numerosas investigaciones se han llevado a cabo con el fin de minimizar el uso de uno de los recursos m\'as importantes mencionados anteriormente, el tiempo. Se han dise\~nado algoritmos en este modelo cuya ejecuci\'on puede tomar a\~nos y que por lo tanto su tiempo de ejecuci\'on es impracticable. Varias metodolog\'ias se han aplicado para reducir el tiempo de ejecuci\'on, una de ellas es la paralelizaci\'on de parte del proceso, esto puede llevarse a cabo con los procesadores de \'ultima generaci\'on los cuales poseen varios n\'ucleos de procesamiento o tambi\'en se puede conseguir con el uso de varios computadores conectados en red.
+Numerosas investigaciones se han llevado a cabo con el fin de minimizar el uso de uno de los recursos m\'as importantes mencionados anteriormente, el tiempo. Se han dise\~nado algoritmos en este modelo cuya ejecuci\'on puede tomar a\~nos, y que por lo tanto, su tiempo de ejecuci\'on es impracticable. Varias metodolog\'ias se han aplicado para reducir el tiempo de ejecuci\'on, una de ellas es la paralelizaci\'on de parte del proceso, esto puede llevarse a cabo con los procesadores de \'ultima generaci\'on los cuales poseen varios n\'ucleos de procesamiento, o tambi\'en se puede conseguir con el uso de varios computadores conectados en red.
 
-Este trabajo plantea una soluci\'on para utilizar los recursos disponibles de forma eficiente y as\'i reducir los tiempos de ejecuci\'on, la soluci\'on que se describir\'a hace uso de una herramienta que explota ambas metodolog\'ias, ejecuci\'on paralela en procesadores multi-n\'ucleo y uso de numerosas computadoras.
+Este trabajo plantea una soluci\'on para utilizar los recursos disponibles de forma eficiente y as\'i reducir los tiempos de ejecuci\'on. La soluci\'on que se describir\'a hace uso de una herramienta que explota ambas metodolog\'ias, ejecuci\'on paralela en procesadores multi-n\'ucleo y uso de numerosas computadoras.
