--- a/doc/objetivos.tex
+++ b/doc/objetivos.tex
@@ -1,5 +1,5 @@
 Con el fin de fijar el camino a seguir se marcan varios objetivos, estos se describen a continuación y serán la hoja de ruta para el desarrollo del proyecto.
 
-En primer lugar, se pretende que el desarrollo a realizar lleve a cabo fases del proceso evolutivo en una plataforma que consiga reducir el uso de tiempo y recursos a niveles razonables para poder resolver problemas que de otra manera no podrían resolverse. Adem\'as, la implementaci\'on realizada debe proporcionar una solución fácil de desplegar en problemas ya implementados con el objetivo de que la comunidad sin conocimientos de tecnologías diferentes de las de cómputo evolutivo puedan utilizarla.
+En primer lugar, se pretende que la soluci\'on aportada lleve a cabo fases del proceso evolutivo en una plataforma que consiga reducir el uso de tiempo y recursos a niveles razonables, para resolver as\'i problemas que de otra manera no podrían resolverse. Adem\'as, la implementaci\'on realizada debe proporcionar una solución fácil de desplegar en problemas ya implementados, con el objetivo de que la comunidad sin conocimientos de tecnologías diferentes de las de cómputo evolutivo puedan utilizarla.
 
 Por \'ultimo, pero no por ello menos importante, se deber\'a demostrar el valor de la soluci\'on desarrollada utilizando ejemplos y justificando cuando es razonable utilizar este tipo de soluciones.
