--- a/doc/problema-facerecognition-resultados.tex
+++ b/doc/problema-facerecognition-resultados.tex
@@ -4,7 +4,7 @@ Analizamos los resultados obtenidos al ejecutar un problema en el que la evaluac
 
 La implementaci\'on secuencial del algoritmo de reconocimiento facial utiliza la librer\'ia OpenCV para el tratamiento de las im\'agenes. El uso de esta librer\'ia ayuda a reducir notablemente el tiempo de procesamiento, as\'i la fase de entrenamiento en la ejecuci\'on secuencial necesita sobre unos 127 segundos y la fase de consulta unos 140 segundos. 
 
-En primer lugar se realiz\'o la integraci\'on del problema de reconocimiento facial con Hadoop para paralelizar el procesamiento de las im\'agenes haciendo uso de esta herramienta. El nivel de paralelizaci\'on depende de como se divida la entrada del problema ya que se ejecutar\'an tantas tareas en paralelo como divisiones de la entrada existan \ver{fases-evaluacion-trabajo-por-ind}. Esta idea nos podr\'ia llevar al convencimiento de que obtendremos mejores tiempos mientras mas tareas tengamos, pero la creaci\'on de la tarea, distribuci\'on de la entrada al trabajo y la posterior destrucci\'on de la tarea conllevan tiempos que deben ser considerados. Es por esto que se han realizado ejecuciones para encontrar el mejor n\'umero de tareas que se ejecuten de forma paralela. Los tiempos obtenidos en segundos se muestran en una tabla \vertabla{tabla-tiempos-num-grupos}.
+En primer lugar se realiz\'o la integraci\'on del problema de reconocimiento facial con Hadoop para paralelizar el procesamiento de las im\'agenes haciendo uso de esta herramienta. El nivel de paralelizaci\'on depende de como se divida la entrada del problema ya que se ejecutar\'an tantas tareas en paralelo como divisiones de la entrada existan \ver{fases-evaluacion-trabajo-por-ind}. Esta idea nos podr\'ia llevar al convencimiento de que obtendremos mejores tiempos mientras m\'as tareas tengamos, pero la creaci\'on de la tarea, distribuci\'on de la entrada al trabajo y la posterior destrucci\'on de la tarea conllevan tiempos que deben ser considerados. Es por esto que se han realizado ejecuciones para encontrar el mejor n\'umero de tareas que se ejecuten de forma paralela. Los tiempos obtenidos en segundos se muestran en una tabla \vertabla{tabla-tiempos-num-grupos}.
 
 \begin{table}[H]
   \begin{center}
